--- a/UX-UI/styles.css
+++ b/UX-UI/styles.css
@@ -188,6 +188,10 @@ font-weight: bold;
 font-size: 30px;
 }
 
+.banner-text p {
+  color: white;
+}
+
 .banner-text .btn {
   display: inline-block;
   margin-bottom: 4.5rem;
